# raspberry-pi-pico-webusb

./: .eslintrc.cjs  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
backend/: CMakeLists.txt  main.cc  tusb_config.h  usb_descriptors.cc  usb_descriptors.h
src/: app.html  global.d.ts  serial.ts  typings.d.ts
src/components/: SineCurve.svelte  TestControls.svelte  TransferSpeed.svelte
src/routes/: +layout.svelte  +page.svelte  AudioInterface.svelte
src/stores/: store.ts
src/utils/: Audio.ts
